[package]
name = "cotuong_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
futures-util = "0.3"

cotuong_engine = { path = "../engine" }
